--- a/WolvenKit/Views/Documents/RDTMeshView.xaml
+++ b/WolvenKit/Views/Documents/RDTMeshView.xaml
@@ -1,182 +1,228 @@
 <reactiveUi:ReactiveUserControl
-    x:TypeArguments="documents:RDTMeshViewModel"
     x:Class="WolvenKit.Views.Documents.RDTMeshView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:reactiveUi="http://reactiveui.net"
+    xmlns:ab3d="clr-namespace:Ab3d.Controls;assembly=Ab3d.PowerToys"
+    xmlns:cameras="clr-namespace:Ab3d.Cameras;assembly=Ab3d.PowerToys"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
+    xmlns:dxControls="clr-namespace:Ab3d.DirectX.Controls;assembly=Ab3d.DXEngine.Wpf"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App" xmlns:syncfusion="http://schemas.syncfusion.com/wpf" xmlns:dxControls="clr-namespace:Ab3d.DirectX.Controls;assembly=Ab3d.DXEngine.Wpf" xmlns:visuals="clr-namespace:Ab3d.Visuals;assembly=Ab3d.PowerToys" xmlns:ab3d="clr-namespace:Ab3d.Controls;assembly=Ab3d.PowerToys" xmlns:cameras="clr-namespace:Ab3d.Cameras;assembly=Ab3d.PowerToys" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    mc:Ignorable="d" 
-    d:DesignHeight="450" d:DesignWidth="800"
+    xmlns:reactiveUi="http://reactiveui.net"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    xmlns:visuals="clr-namespace:Ab3d.Visuals;assembly=Ab3d.PowerToys"
+    Margin="0"
     d:DataContext="{d:DesignInstance Type={x:Type documents:RDTMeshViewModel}}"
-    BorderThickness="1,0,1,1"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    x:TypeArguments="documents:RDTMeshViewModel"
     BorderBrush="{StaticResource BorderAlt}"
-    Margin="0">
+    BorderThickness="1,0,1,1"
+    mc:Ignorable="d">
 
     <Grid>
-        <!--Border Name="ViewportBorder" Background="Transparent">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="5" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <syncfusion:SfGridSplitter Grid.Column="1" HorizontalAlignment="Stretch" />
+        <Border Name="ViewportBorder" Background="Transparent">
             <dxControls:DXViewportView
-                            Name="MainDXViewportView"
-                            BackgroundColor="Transparent"
-                            PresentationType="DirectXImage">
+                Name="MainDXViewportView"
+                BackgroundColor="Transparent"
+                PresentationType="DirectXImage">
 
                 <Viewport3D Name="MainViewport">
-
                     <ModelVisual3D x:Name="ContentVisual" />
                     <visuals:WireframeVisual3D
-                                    x:Name="ContentWireframeVisual"
-                                    LineColor="Black"
-                                    LineThickness="0.8"
-                                    ShowPolygonLines="True"
-                                    UseModelColor="False"
-                                    WireframeType="WireframeWithOriginalSolidModel" />
+                        x:Name="ContentWireframeVisual"
+                        LineColor="Black"
+                        LineThickness="0.8"
+                        ShowPolygonLines="True"
+                        UseModelColor="False"
+                        WireframeType="WireframeWithOriginalSolidModel" />
+                    <visuals:LightingRigVisual3D
+                        x:Name="ContentLight"
+                        AmbientLightColor="#333333"
+                        BackLightColor="Black"
+                        FillLightColor="Black"
+                        KeyLightColor="#cccccc"
+                        KeyLightDirection="0,-1,0" />
                 </Viewport3D>
             </dxControls:DXViewportView>
         </Border>
         <ab3d:ViewCubeCameraController
-                        x:Name="ViewCubeCameraController1"
-                        Width="100"
-                        Height="100"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Bottom"
-                        AmbientLightColor="{DynamicResource MahApps.Colors.AccentBase}"
-                        Foreground="{DynamicResource MahApps.Brushes.AccentBase}"
-                        IsEdgeSelectionEnabled="True"
-                        IsRotationCircleShown="True"
-                        SelectionBrush="{DynamicResource MahApps.Brushes.Accent3}"
-                        TargetCamera="{Binding ElementName=Camera1}" />
+            x:Name="ViewCubeCameraController1"
+            Width="100"
+            Height="100"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            AmbientLightColor="{DynamicResource MahApps.Colors.AccentBase}"
+            Foreground="{DynamicResource MahApps.Brushes.AccentBase}"
+            IsEdgeSelectionEnabled="True"
+            IsRotationCircleShown="True"
+            SelectionBrush="{DynamicResource MahApps.Brushes.Accent3}"
+            TargetCamera="{Binding ElementName=Camera1}" />
         <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Bottom"
-                        FontSize="7"
-                        Text="Powered by Ab4d" />
+            Grid.Row="1"
+            Grid.Column="1"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            FontSize="7"
+            Text="Powered by Ab4d" />
         <cameras:TargetPositionCamera
-                        Name="Camera1"
-                        Attitude="-20"
-                        Bank="0"
-                        Distance="200"
-                        Heading="230"
-                        ShowCameraLight="Always"
-                        TargetPosition="0 0 0"
-                        TargetViewport3D="{Binding ElementName=MainViewport}" />
+            Name="Camera1"
+            Attitude="-20"
+            Bank="0"
+            CameraType="OrthographicCamera"
+            Distance="200"
+            Heading="230"
+            TargetPosition="0 0 0"
+            TargetViewport3D="{Binding ElementName=MainViewport}" />
 
         <ab3d:MouseCameraController
-                        Name="MouseCameraController1"
-                        EventsSourceElement="{Binding ElementName=ViewportBorder}"
-                        MoveCameraConditions="MiddleMouseButtonPressed"
-                        MoveOnlyHorizontally="True"
-                        QuickZoomConditions="RightMouseButtonPressed"
-                        RotateCameraConditions="LeftMouseButtonPressed"
-                        TargetCamera="{Binding ElementName=Camera1}"
-                        ZoomMode="Viewport3DCenter" />
+            Name="MouseCameraController1"
+            EventsSourceElement="{Binding ElementName=ViewportBorder}"
+            MoveCameraConditions="MiddleMouseButtonPressed"
+            MoveOnlyHorizontally="True"
+            QuickZoomConditions="RightMouseButtonPressed"
+            RotateCameraConditions="LeftMouseButtonPressed"
+            TargetCamera="{Binding ElementName=Camera1}"
+            ZoomMode="Viewport3DCenter" />
 
         <ab3d:CameraAxisPanel
-                        Width="50"
-                        Height="50"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Bottom"
-                        Is3DAxesShown="True"
-                        TargetCamera="{Binding ElementName=Camera1}" />
+            Width="50"
+            Height="50"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Is3DAxesShown="True"
+            TargetCamera="{Binding ElementName=Camera1}" />
 
         <StackPanel
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Top"
-                        Orientation="Vertical">
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Top"
+            Orientation="Vertical">
 
             <Expander
-                            Header="Assimp info"
-                            IsExpanded="False"
-                            Style="{StaticResource BaseStyle}"
-                            Visibility="Collapsed">
+                Header="Assimp info"
+                IsExpanded="False"
+                Style="{StaticResource BaseStyle}"
+                Visibility="Collapsed">
                 <TextBlock
-                                Name="FileFormatsTextBlock"
-                                Margin="10,5,10,0"
-                                Text=""
-                                TextWrapping="Wrap" />
+                    Name="FileFormatsTextBlock"
+                    Margin="10,5,10,0"
+                    Text=""
+                    TextWrapping="Wrap" />
             </Expander>
         </StackPanel>
 
         <syncfusion:DropDownButton
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Top"
-                        Label="Options">
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Label="Options">
             <syncfusion:DropDownButton.IconTemplate>
                 <DataTemplate>
                     <iconPacks:PackIconRemixIcon
-                                    Width="12"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    Kind="Settings2Fill" />
+                        Width="12"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Kind="Settings2Fill" />
                 </DataTemplate>
             </syncfusion:DropDownButton.IconTemplate>
             <Border
-                            Margin="5"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Bottom"
-                            Background="Black"
-                            BorderBrush="Black"
-                            BorderThickness="2"
-                            Visibility="Visible">
+                Margin="5"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Background="Black"
+                BorderBrush="Black"
+                BorderThickness="2"
+                Visibility="Visible">
                 <StackPanel Margin="10,5" Orientation="Vertical">
 
                     <Button
-                                    Name="LoadButton"
-                                    Height="26"
-                                    Margin="0,10,0,0"
-                                    HorizontalAlignment="Left"
-                                    Click="LoadButton_OnClick"
-                                    Content="Load file"
-                                    IsDefault="True"
-                                    Visibility="Collapsed" />
+                        Name="LoadButton"
+                        Height="26"
+                        Margin="0,10,0,0"
+                        HorizontalAlignment="Left"
+                        Click="LoadButton_OnClick"
+                        Content="Load file"
+                        IsDefault="True"
+                        Visibility="Collapsed" />
 
                     <TextBlock
-                                    Margin="0,10,0,0"
-                                    VerticalAlignment="Center"
-                                    FontWeight="Bold"
-                                    Text="(or drag and drop 3D model file)"
-                                    Visibility="Collapsed" />
+                        Margin="0,10,0,0"
+                        VerticalAlignment="Center"
+                        FontWeight="Bold"
+                        Text="(or drag and drop 3D model file)"
+                        Visibility="Collapsed" />
 
                     <CheckBox
-                                    Name="ShowWireframeCheckBox"
-                                    Margin="0,10,0,0"
-                                    HorizontalAlignment="Left"
-                                    Checked="OnShowWireframeCheckBoxCheckedChanged"
-                                    Content="Show wireframe"
-                                    IsChecked="True"
-                                    Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
-                                    Unchecked="OnShowWireframeCheckBoxCheckedChanged" />
+                        Name="ShowWireframeCheckBox"
+                        Margin="0,10,0,0"
+                        HorizontalAlignment="Left"
+                        Checked="OnShowWireframeCheckBoxCheckedChanged"
+                        Content="Show wireframe"
+                        IsChecked="True"
+                        Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
+                        Unchecked="OnShowWireframeCheckBoxCheckedChanged" />
                     <CheckBox
-                                    Name="AddLineDepthBiasCheckBox"
-                                    Margin="0,4,0,0"
-                                    HorizontalAlignment="Left"
-                                    Checked="OnAddLineDepthBiasCheckBoxCheckedChanged"
-                                    Content="Add line depth bias (DXEngine only)"
-                                    IsChecked="True"
-                                    IsEnabled="{Binding ElementName=ShowWireframeCheckBox, Path=IsChecked}"
-                                    Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
-                                    Unchecked="OnAddLineDepthBiasCheckBoxCheckedChanged" />
+                        Name="AddLineDepthBiasCheckBox"
+                        Margin="0,4,0,0"
+                        HorizontalAlignment="Left"
+                        Checked="OnAddLineDepthBiasCheckBoxCheckedChanged"
+                        Content="Add line depth bias (DXEngine only)"
+                        IsChecked="True"
+                        IsEnabled="{Binding ElementName=ShowWireframeCheckBox, Path=IsChecked}"
+                        Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
+                        Unchecked="OnAddLineDepthBiasCheckBoxCheckedChanged" />
                     <CheckBox
-                                    Name="ReadPolygonIndicesCheckBox"
-                                    Margin="0,4,0,0"
-                                    HorizontalAlignment="Left"
-                                    Checked="OnReadPolygonIndicesCheckBoxCheckedChanged"
-                                    Content="Read PolygonIndices"
-                                    IsChecked="True"
-                                    Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
-                                    ToolTip="When checked ReaderObj will read PolygonIndices collection that can be used to show polygons instead of triangles. Object need to be shown with wireframe to see the difference."
-                                    Unchecked="OnReadPolygonIndicesCheckBoxCheckedChanged" />
+                        Name="ReadPolygonIndicesCheckBox"
+                        Margin="0,4,0,0"
+                        HorizontalAlignment="Left"
+                        Checked="OnReadPolygonIndicesCheckBoxCheckedChanged"
+                        Content="Read PolygonIndices"
+                        IsChecked="True"
+                        Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
+                        ToolTip="When checked ReaderObj will read PolygonIndices collection that can be used to show polygons instead of triangles. Object need to be shown with wireframe to see the difference."
+                        Unchecked="OnReadPolygonIndicesCheckBoxCheckedChanged" />
 
                     <Button
-                                    Name="ShowInfoButton"
-                                    Margin="0,20,0,0"
-                                    Click="ShowInfoButton_OnClick"
-                                    Content="Show objects info"
-                                    IsEnabled="False" />
+                        Name="ShowInfoButton"
+                        Margin="0,20,0,0"
+                        Click="ShowInfoButton_OnClick"
+                        Content="Show objects info"
+                        IsEnabled="False" />
                 </StackPanel>
             </Border>
-        </syncfusion:DropDownButton-->
+        </syncfusion:DropDownButton>
+        <ScrollViewer Grid.Column="2">
+            <ItemsControl ItemsSource="{Binding Models}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Vertical" />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.Template>
+                    <ControlTemplate>
+                        <ItemsPresenter />
+                    </ControlTemplate>
+                </ItemsControl.Template>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox
+                                Margin="5,2"
+                                Checked="ReloadModels"
+                                IsChecked="{Binding IsEnabled, Mode=TwoWay}"
+                                Unchecked="ReloadModels">
+                                <TextBlock VerticalAlignment="Center" Text="{Binding Name}" />
+                            </CheckBox>
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
     </Grid>
 </reactiveUi:ReactiveUserControl>
