--- a/WolvenKit/Views/Documents/RDTWidgetView.xaml
+++ b/WolvenKit/Views/Documents/RDTWidgetView.xaml
@@ -76,6 +76,7 @@
                     <TextBlock
                         Margin="5,5"
                         VerticalAlignment="Center"
+                        FontWeight="Bold"
                         Text="Style" />
                     <ComboBox
                         Grid.Column="1"
@@ -92,6 +93,7 @@
                     <TextBlock
                         Margin="5,5"
                         VerticalAlignment="Center"
+                        FontWeight="Bold"
                         Text="Theme" />
                     <ComboBox
                         Grid.Column="1"
@@ -115,6 +117,7 @@
                 <TextBlock
                     Margin="5,5"
                     VerticalAlignment="Center"
+                    FontWeight="Bold"
                     Text="Animations" />
                 <Border BorderBrush="{StaticResource BorderAlt}" BorderThickness="0,1,0,0" />
                 <ItemsControl x:Name="AnimationList">
@@ -137,7 +140,7 @@
                                     <ColumnDefinition Width="2*" />
                                 </Grid.ColumnDefinitions>
                                 <TextBlock
-                                    Margin="5,0"
+                                    Margin="15,0,5,0"
                                     VerticalAlignment="Center"
                                     Text="{Binding Name}" />
                                 <GridSplitter
@@ -148,8 +151,16 @@
                                     Grid.Column="2"
                                     Margin="3"
                                     Orientation="Horizontal">
-                                    <Button Command="{Binding PlayCommand}" Content="Play" />
-                                    <Button Command="{Binding StopCommand}" Content="Stop" />
+                                    <Button
+                                        Margin="5,0,0,0"
+                                        Padding="5,2"
+                                        Command="{Binding PlayCommand}"
+                                        Content="Play" />
+                                    <Button
+                                        Margin="5,0,0,0"
+                                        Padding="5,2"
+                                        Command="{Binding StopCommand}"
+                                        Content="Stop" />
                                 </StackPanel>
                             </Grid>
                         </DataTemplate>
@@ -160,6 +171,7 @@
                     <TextBlock
                         Margin="5,5"
                         VerticalAlignment="Center"
+                        FontWeight="Bold"
                         Text="inkTextWidgets" />
                 </StackPanel>
                 <Border BorderBrush="{StaticResource BorderAlt}" BorderThickness="0,1,0,0" />
@@ -184,7 +196,7 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel>
                                     <TextBlock
-                                        Margin="5,0"
+                                        Margin="15,2,5,2"
                                         VerticalAlignment="Center"
                                         Text="{Binding Name}" />
                                 </StackPanel>
@@ -193,6 +205,10 @@
                                     HorizontalAlignment="Stretch"
                                     Background="{StaticResource WolvenKitCyan}" />
                                 <editors:RedStringEditor Grid.Column="2" RedString="{Binding Text, Mode=TwoWay}" />
+                                <Border
+                                    Grid.ColumnSpan="3"
+                                    BorderBrush="{StaticResource BorderAlt}"
+                                    BorderThickness="0,0,0,1" />
                             </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
@@ -201,6 +217,7 @@
                     <TextBlock
                         Margin="5,5"
                         VerticalAlignment="Center"
+                        FontWeight="Bold"
                         Text="Style Bindings" />
                 </StackPanel>
                 <Border BorderBrush="{StaticResource BorderAlt}" BorderThickness="0,1,0,0" />
@@ -217,7 +234,10 @@
                     </ItemsControl.Template>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding}" />
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Margin="15,2,5,2" Text="{Binding}" />
+                                <Border BorderBrush="{StaticResource BorderAlt}" BorderThickness="0,0,0,1" />
+                            </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
@@ -225,6 +245,7 @@
                     <TextBlock
                         Margin="5,5"
                         VerticalAlignment="Center"
+                        FontWeight="Bold"
                         Text="Effects" />
                 </StackPanel>
                 <Border BorderBrush="{StaticResource BorderAlt}" BorderThickness="0,1,0,0" />
@@ -241,7 +262,10 @@
                     </ItemsControl.Template>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding EffectName}" />
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Margin="15,2,5,2" Text="{Binding EffectName}" />
+                                <Border BorderBrush="{StaticResource BorderAlt}" BorderThickness="0,0,0,1" />
+                            </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
@@ -249,7 +273,8 @@
                     <TextBlock
                         Margin="5,5"
                         VerticalAlignment="Center"
-                        Text="Export Widget" />
+                        FontWeight="Bold"
+                        Text="Export inkWidget as XML" />
                 </StackPanel>
                 <Border BorderBrush="{StaticResource BorderAlt}" BorderThickness="0,1,0,0" />
                 <ItemsControl x:Name="WidgetExportButtons">
@@ -265,10 +290,17 @@
                     </ItemsControl.Template>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Button
-                                Command="{Binding ExportWidgetCommand, RelativeSource={RelativeSource AncestorType={x:Type local:RDTWidgetView}}}"
-                                CommandParameter="{Binding}"
-                                Content="{Binding Name}" />
+                            <StackPanel Margin="5" Orientation="Horizontal">
+                                <TextBlock
+                                    Margin="10,0,5,0"
+                                    VerticalAlignment="Center"
+                                    Text="{Binding Name}" />
+                                <Button
+                                    Padding="5,2"
+                                    Command="{Binding ExportWidgetCommand, RelativeSource={RelativeSource AncestorType={x:Type local:RDTWidgetView}}}"
+                                    CommandParameter="{Binding}"
+                                    Content="Export" />
+                            </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
@@ -276,11 +308,13 @@
         </ScrollViewer>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top">
             <Button
-                Margin="5"
+                Margin="5,5,5,0"
+                Padding="7,2"
                 Click="Button_Click"
                 Content="Regenerate inkTextWidgets" />
             <Button
-                Margin="5"
+                Margin="5,5,5,0"
+                Padding="7,2"
                 Click="SaveAsImage"
                 Content="Save as Images" />
 
